[gd_scene load_steps=22 format=2]

[ext_resource path="res://UI/NPR_2.png" type="Texture" id=1]
[ext_resource path="res://UI/NPR_1.png" type="Texture" id=2]
[ext_resource path="res://Char/Shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://UI/YesPanel.tres" type="StyleBox" id=4]
[ext_resource path="res://UI/Default_Theme.tres" type="Theme" id=5]
[ext_resource path="res://UI/Panel.tres" type="StyleBox" id=6]
[ext_resource path="res://Char/Shop/CatGrid.gd" type="Script" id=7]
[ext_resource path="res://UI/X.png" type="Texture" id=8]
[ext_resource path="res://UI/Font_Large.tres" type="DynamicFont" id=9]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="Theme" id=2]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = SubResource( 3 )
VScrollBar/styles/grabber_highlight = SubResource( 4 )
VScrollBar/styles/grabber_pressed = SubResource( 5 )
VScrollBar/styles/scroll = SubResource( 6 )
VScrollBar/styles/scroll_focus = SubResource( 7 )

[sub_resource type="MeshTexture" id=14]

[sub_resource type="MeshTexture" id=10]

[sub_resource type="MeshTexture" id=11]

[sub_resource type="StyleBoxFlat" id=9]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=12]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.211765, 0.0980392, 0.0980392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.662745, 0.662745, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0
anti_aliasing = false

[node name="Shop" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="M1" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="M1"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 20
patch_margin_right = 16
patch_margin_bottom = 60

[node name="M2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="M2"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 36
patch_margin_right = 16
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="M2/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="M2/BG/M"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1030.0
margin_bottom = 470.0
custom_constants/separation = 20

[node name="Title" type="HBoxContainer" parent="M2/BG/M/VB"]
margin_right = 980.0
margin_bottom = 48.0
custom_constants/separation = 16

[node name="CloseButton" type="Button" parent="M2/BG/M/VB/Title"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 8 )
expand_icon = true

[node name="TitleLabel" type="Label" parent="M2/BG/M/VB/Title"]
margin_left = 64.0
margin_right = 980.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
text = "SHOP"
valign = 1

[node name="HB" type="HBoxContainer" parent="M2/BG/M/VB"]
margin_top = 68.0
margin_right = 980.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="ScrollContainer" parent="M2/BG/M/VB/HB"]
margin_right = 720.0
margin_bottom = 352.0
rect_min_size = Vector2( 720, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
scroll_horizontal_enabled = false

[node name="CatG" type="VBoxContainer" parent="M2/BG/M/VB/HB/S"]
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )

[node name="Panel" type="VBoxContainer" parent="M2/BG/M/VB/HB"]
margin_left = 724.0
margin_right = 980.0
margin_bottom = 352.0
rect_min_size = Vector2( 256, 320 )
size_flags_horizontal = 10
size_flags_vertical = 3

[node name="Name" type="RichTextLabel" parent="M2/BG/M/VB/HB/Panel"]
margin_right = 256.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_styles/normal = ExtResource( 6 )
fit_content_height = true

[node name="Desc" type="RichTextLabel" parent="M2/BG/M/VB/HB/Panel"]
margin_top = 52.0
margin_right = 256.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 48 )
custom_styles/normal = ExtResource( 6 )
fit_content_height = true

[node name="Price" type="RichTextLabel" parent="M2/BG/M/VB/HB/Panel"]
margin_top = 104.0
margin_right = 256.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 48 )
custom_styles/normal = ExtResource( 6 )
text = "Price : "
fit_content_height = true

[node name="Panel" type="PanelContainer" parent="M2/BG/M/VB/HB/Panel"]
margin_top = 156.0
margin_right = 256.0
margin_bottom = 248.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )

[node name="VB" type="VBoxContainer" parent="M2/BG/M/VB/HB/Panel/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 252.0
margin_bottom = 88.0

[node name="Amo" type="Label" parent="M2/BG/M/VB/HB/Panel/Panel/VB"]
margin_right = 248.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Amount To Buy :"
valign = 1

[node name="AmoSlider" type="HSlider" parent="M2/BG/M/VB/HB/Panel/Panel/VB"]
margin_top = 52.0
margin_right = 248.0
margin_bottom = 68.0
size_flags_vertical = 6
custom_icons/grabber_disabled = SubResource( 14 )
custom_icons/grabber_highlight = SubResource( 10 )
custom_icons/grabber = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 12 )
min_value = 1.0
max_value = 10.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="RichTextLabel" parent="M2/BG/M/VB/HB/Panel"]
margin_top = 252.0
margin_right = 256.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 48 )
custom_styles/normal = ExtResource( 6 )
text = "Total Price : "
fit_content_height = true

[node name="Buy" type="Button" parent="M2/BG/M/VB/HB/Panel"]
margin_top = 304.0
margin_right = 256.0
margin_bottom = 352.0
rect_min_size = Vector2( 0, 48 )
focus_mode = 0
custom_colors/font_color = Color( 0.490196, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.490196, 1, 1, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Buy"

[node name="PopUp" type="Label" parent="M2/BG/M"]
visible = false
margin_left = 447.0
margin_top = 244.0
margin_right = 633.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 0.662745, 0.662745, 1 )
custom_styles/normal = SubResource( 15 )
text = "Not Enough Money!"
align = 1
valign = 1

[connection signal="pressed" from="M2/BG/M/VB/Title/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="value_changed" from="M2/BG/M/VB/HB/Panel/Panel/VB/AmoSlider" to="M2/BG/M/VB/HB/S/CatG" method="_amo_change"]
